Fix overlapping of title and timing in week event view

--- a/frontend/src/components/Calendar/styles.css
+++ b/frontend/src/components/Calendar/styles.css
@@ -454,7 +454,7 @@ button.rbc-input::-moz-focus-inner {
   flex: 1 0 0;
   -ms-flex-preferred-size: 0px;
   flex-basis: 0px;
-  overflow: hidden;
+  overflow: visible;
   height: 100%;
 }
 
